--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html>
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -40,8 +40,8 @@
 </head>
 <body>
 
-  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
 
+  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
@@ -61,20 +61,18 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
-
-
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li>
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a></li></ul>
             </div>
         </div>
     </nav>
 </section>
 
+
 <section data-bs-version="5.1" class="header13 cid-sYsm6ZTLsK mbr-fullscreen mbr-parallax-background" id="header13-1">
-
-
-
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
-
     <div class="align-center container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
@@ -98,17 +96,14 @@
                             <span class="mbr-iconfont socicon-linkedin socicon" style="color: rgb(250, 250, 250); fill: rgb(250, 250, 250);"></span>
                         </a>
                     </div>
-
-
                 </div>
             </div>
         </div>
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="features3 cid-sYxzkmBasE" id="features3-o">
-
-
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
@@ -123,7 +118,6 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Sound Design</strong></h5>
-
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">"I would like to know how sound is made, to know how to recreate it and move it in space."
 <br>
 <br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
@@ -161,9 +155,8 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="features1 cid-sYxCedtxpF mbr-parallax-background" id="features1-p">
-
-
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
     <div class="container">
@@ -267,9 +260,8 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="form6 cid-sYsmvwNmoy" id="form6-4">
-
-
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
@@ -293,7 +285,6 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
                             <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control" value="" id="email-form6-4">
                         </div>
-
                         <div class="col-auto mbr-section-btn align-center"><button type="submit" class="btn btn-primary display-4">Submit</button></div>
                     </div>
                 </form>
@@ -302,23 +293,12 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-3">
-
-
-
-
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
-
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
-
-
-
-
-
-
                 <div class="soc-item">
                         <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
