--- a/pages/learn.html
+++ b/pages/learn.html
@@ -81,9 +81,7 @@
             <div class="card col-12 col-lg-10">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>TOOLS</strong></h4>
-
-
+                        <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>LEARN</strong></h4>
                     </div>
                 </div>
             </div>
@@ -91,11 +89,8 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="features4 cid-sYzcirxQYM" id="features5-1h">
-
-
-
-
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6">
@@ -142,23 +137,12 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-g">
-
-
-
-
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
-
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
-
-
-
-
-
-
                 <div class="soc-item">
                         <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
