--- a/pages/learn/storia_della_musica_elettroacustica/introduzione.html
+++ b/pages/learn/storia_della_musica_elettroacustica/introduzione.html
@@ -90,7 +90,34 @@
               </div>
           </div>
       </div>
-  </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> web page was made with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>
+  </section>
+
+  <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-g">
+      <div class="container">
+          <div class="media-container-row align-center mbr-white">
+              <div class="row social-row">
+                  <div class="social-list align-right pb-2">
+                  <div class="soc-item">
+                          <a href="https://github.com/Velitch" target="_blank">
+                              <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
+                          </a>
+                      </div><div class="soc-item">
+                          <a href="https://instagram.com/velitch?utm_medium=copy_link" target="_blank">
+                              <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
+                          </a>
+                      </div><div class="soc-item">
+                          <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" target="_blank">
+                              <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
+                          </a>
+                      </div></div>
+              </div>
+              <div class="row row-copirayt">
+                  <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
+                      <a href="index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
+              </div>
+          </div>
+      </div>
+  </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
