--- a/pages/learn/storia_della_musica_elettroacustica/introduzione.html
+++ b/pages/learn/storia_della_musica_elettroacustica/introduzione.html
@@ -71,26 +71,27 @@
 </section>
 
 
-    <section data-bs-version="5.1" class="video4 cid-sZfdWir3ZP" id="video4-1w">
-      <div class="container">
-          <div class="title-wrapper mb-5">
-          </div>
-          <div class="row align-items-center">
-              <div class="col-12 col-lg-4 video-block">
-                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/HujDEPAWboE?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-              </div>
-              <div class="col-12 col-lg">
-                  <div class="text-wrapper">
-                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                          <strong>Video with description</strong>
-                      </h5>
-                      <p class="mbr-text mbr-fonts-style display-7">
-                          Use Mobirise website building software to create multiple sites for commercial and non-profit projects. Click on the video preview in this block to add the link to your video. Make sure that your video is not private. You can add a description below the video. If you want to hide some of the text fields, open the Block parameters, and uncheck relevant options.</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/HujDEPAWboE?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>                
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Video with description</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        Use Mobirise website building software to create multiple sites for commercial and non-profit projects. Click on the video preview in this block to add the link to your video. Make sure that your video is not private. You can add a description below the video. If you want to hide some of the text fields, open the Block parameters, and uncheck relevant options.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
   <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-g">
       <div class="container">
