--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Projects</title>
+  <title>Learn</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -37,12 +37,11 @@
 
 
 
-
 </head>
 <body>
 
-  <section data-bs-version="5.1" class="menu menu2 cid-sYzkrQ9Uyj" once="menu" id="menu2-1k">
 
+  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
@@ -62,29 +61,26 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
-
-
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li>
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li>
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a></li>
+                </ul>
             </div>
         </div>
     </nav>
 </section>
 
+
 <section data-bs-version="5.1" class="info3 cid-sYzkrQBaLQ mbr-parallax-background" id="info3-1l">
-
-
-
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="card col-12 col-lg-10">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>PROJECTS</strong></h4>
-
-
                     </div>
                 </div>
             </div>
@@ -93,10 +89,6 @@
 </section>
 
 <section data-bs-version="5.1" class="features4 cid-sYzkrQZeug" id="features5-1m">
-
-
-
-
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6">
@@ -104,7 +96,6 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>corkino</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Ultra-portable all-in-one MaxMSP controller<br></p>
@@ -124,7 +115,6 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Dual Channel DIBox</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Indispensable tool in any concert or studio context</p>
@@ -144,22 +134,10 @@
 </section>
 
 <section data-bs-version="5.1" class="footer3 cid-sYzkrRj9He mbr-reveal" once="footers" id="footer3-1n">
-
-
-
-
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
-
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
-
-
-
-
-
-
                 <div class="soc-item">
                         <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
