--- a/pages/tools.html
+++ b/pages/tools.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Tools</title>
+  <title>Learn</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -37,12 +37,11 @@
 
 
 
-
 </head>
 <body>
 
-  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-f">
 
+  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
@@ -62,29 +61,26 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
-
-
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li>
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li>
+                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a></li>
+                </ul>
             </div>
         </div>
     </nav>
 </section>
 
+
 <section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
-
-
-
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="card col-12 col-lg-10">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>TOOLS</strong></h4>
-
-
                     </div>
                 </div>
             </div>
@@ -92,11 +88,8 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="features4 cid-sYzcirxQYM" id="features5-1h">
-
-
-
-
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6">
