--- a/assets/internals/gkv_footer.html
+++ b/assets/internals/gkv_footer.html
@@ -1,4 +1,27 @@
-<section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-g">
+<!DOCTYPE html>
+<html>
+<head>
+
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/parallax/jarallax.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/theme/css/style.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
+  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
+
+
+</head>
+<body>
+
+  <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-g">
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="row social-row">
